force-app/main/default/objects/MS_Team_Meeting_Artifact__c/MS_Team_Meeting_Artifact__c.object-meta.xml
<CustomObject>
    <label>Teams Meeting Artifact</label>
    <nameField>
        <displayFormat>TMA-{000000}</displayFormat>
        <label>Artifact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams Meeting Artifacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>