force-app/main/default/objects/MS_Team_Meeting_Artifact__c/fields/Artifact_Type__c.field-meta.xml
<CustomField>
    <fullName>Artifact_Type__c</fullName>
    <label>Artifact Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transcript</fullName>
            </value>
            <value>
                <fullName>Recording</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>