force-app/main/default/objects/MS_Team_Meeting_Artifact__c/fields/Content_Correlation_ID__c.field-meta.xml
<CustomField>
    <fullName>Content_Correlation_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Content Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>