force-app/main/default/objects/MS_Team_Meeting_Artifact__c/fields/Content_URL__c.field-meta.xml
<CustomField>
    <fullName>Content_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Graph Content URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>