force-app/main/default/objects/MS_Team_Meeting_Artifact__c/fields/Ended_At__c.field-meta.xml
<CustomField>
    <fullName>Ended_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ended At</label>
    <type>DateTime</type>
</CustomField>