force-app/main/default/objects/MS_Team_Meeting_Artifact__c/fields/Graph_Artifact_ID__c.field-meta.xml
<CustomField>
    <fullName>Graph_Artifact_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Graph Artifact ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>