force-app/main/default/objects/MS_Team_Meeting_Artifact__c/fields/Meeting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Schedule__c</fullName>
    <label>Meeting Schedule</label>
    <referenceTo>MS_Team_Call_Schedule__c</referenceTo>
    <relationshipLabel>Meeting Artifacts</relationshipLabel>
    <relationshipName>Meeting_Artifacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>