force-app/main/default/objects/MS_Team_Meeting_Artifact__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Processing Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>